--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Welcome to my project</h1>
+    <h1>Iam instructor in ITI</h1>
 </body>
 </html>
